# makemore

./: backprop_exercise.py  mymore.py  mymore5.py  plot.py  pyproject.toml
